js/js.translator/testData/incremental/invalidation/functionTypeInterfaceWithCrossModuleInliner/lib2/l2b.0.kt
fun doTest(): String {
    return getString()
}
